# REST-API-FastAPI

./: pyproject.toml  sql_app.db
src/conf/: config.ini
