[tool.poetry]
name = "rest-api-fastapi"
version = "0.1.0"
description = ""
authors = ["kostiantyn liapkalo <lynx87@ukr.net>"]
readme = "README.md"
packages = [{include = "rest_api_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
